sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:20: error: not found: value swapped
  }while (gap > 1 || swapped)
                     ^